# order-book-engine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  EVENT_SOURCING.md  INDEX.md  LICENSE  PROFILING.md  README.md  SYNTHETIC_DATA.md
.github/workflows/: ci.yml
bench/: benchmark.cpp  sweep.sh
include/obe/: Command.hpp  EventLog.hpp  FlatHashMap.hpp  MatchingEngine.hpp  MemoryPool.hpp  Order.hpp  OrderBook.hpp  OrderGenerator.hpp  PriceLevel.hpp  RingBuffer.hpp  RiskControls.hpp  Trade.hpp  Types.hpp
src/: EventLog.cpp  MatchingEngine.cpp  Order.cpp  OrderBook.cpp  OrderGenerator.cpp  PriceLevel.cpp  RiskControls.cpp
tests/: CMakeLists.txt  test_cancellation.cpp  test_concurrency.cpp  test_event_log.cpp  test_flat_hash_map.cpp  test_memory_pool.cpp  test_partial_fills.cpp  test_price_time_priority.cpp  test_ring_buffer.cpp  test_risk_controls.cpp  test_self_trade.cpp  test_stress.cpp
